compci and comp ci numeric corrected

--- a/templates/hmis_dash/compBarCI.html
+++ b/templates/hmis_dash/compBarCI.html
@@ -77,16 +77,16 @@
       </button>
 
       <div class="dropdown-menu category" aria-labelledby="dropdownMenuButton">
-        <a class="dropdown-item" href="#">Child Immunisation-Vitamin K1(Birth Dose)</a>
-        <a class="dropdown-item" href="#">Child Immunisation-BCG</a>
-        <a class="dropdown-item" href="#">Child Immunisation(9-11 months)-Measles & Rubella (MR) 1st Dose</a>
-        <a class="dropdown-item" href="#">Child immunisation-Vitamin A Dose-1</a>
-        <a class="dropdown-item" href="#">Children(12-59 months) provided Albendazole</a>
-        <a class="dropdown-item" href="#">Child immunisation DPT and Pentavalent 1st dose</a>
-        <a class="dropdown-item" href="#">Child immunisation DPT and Pentavalent 2nd dose</a>
-        <a class="dropdown-item" href="#">Child immunisation DPT and Pentavalent 3rd dose</a>
 
-    </div>
+            <a class="dropdown-item" href="#">Child Immunisation-Vitamin K1(Birth Dose)</a>
+            <a class="dropdown-item" href="#">Child Immunisation-BCG</a>
+            <a class="dropdown-item" href="#">Child Immunisation(9-11 months)-Measles & Rubella (MR) 1st Dose</a>
+            <a class="dropdown-item" href="#">Child immunisation-Vitamin A Dose-1</a>
+            <a class="dropdown-item" href="#">Children(12-59 months) provided Albendazole</a>
+            <a class="dropdown-item" href="#">Child immunisation DPT and Pentavalent 1st dose</a>
+            <a class="dropdown-item" href="#">Child immunisation DPT and Pentavalent 2nd dose</a>
+            <a class="dropdown-item" href="#">Child immunisation DPT and Pentavalent 3rd dose</a>
+      </div>
 
 
 
@@ -109,17 +109,18 @@
 
       </button>
 
-      <div class="dropdown-menu category" aria-labelledby="dropdownMenuButton">
-        <a class="dropdown-item" href="#">Child Immunisation-Vitamin K1(Birth Dose)</a>
-        <a class="dropdown-item" href="#">Child Immunisation-BCG</a>
-        <a class="dropdown-item" href="#">Child Immunisation(9-11 months)-Measles & Rubella (MR) 1st Dose</a>
-        <a class="dropdown-item" href="#">Child immunisation-Vitamin A Dose-1</a>
-        <a class="dropdown-item" href="#">Children(12-59 months) provided Albendazole</a>
-        <a class="dropdown-item" href="#">Child immunisation DPT and Pentavalent 1st dose</a>
-        <a class="dropdown-item" href="#">Child immunisation DPT and Pentavalent 2nd dose</a>
-        <a class="dropdown-item" href="#">Child immunisation DPT and Pentavalent 3rd dose</a>
+      <div class="dropdown-menu category2" aria-labelledby="dropdownMenuButton">
 
-    </div>
+            <a class="dropdown-item" href="#">Child Immunisation-Vitamin K1(Birth Dose)</a>
+            <a class="dropdown-item" href="#">Child Immunisation-BCG</a>
+            <a class="dropdown-item" href="#">Child Immunisation(9-11 months)-Measles & Rubella (MR) 1st Dose</a>
+            <a class="dropdown-item" href="#">Child immunisation-Vitamin A Dose-1</a>
+            <a class="dropdown-item" href="#">Children(12-59 months) provided Albendazole</a>
+            <a class="dropdown-item" href="#">Child immunisation DPT and Pentavalent 1st dose</a>
+            <a class="dropdown-item" href="#">Child immunisation DPT and Pentavalent 2nd dose</a>
+            <a class="dropdown-item" href="#">Child immunisation DPT and Pentavalent 3rd dose</a>
+
+      </div>
     </div>
   </div>
 
@@ -260,6 +261,8 @@
 
     let getColor;
 
+    
+    
       getColor = d3.scaleSequential().domain([d3.min(data, xValue), d3.max(data, xValue)])
 
         .interpolator(d3.interpolateRdYlGn);
@@ -507,8 +510,9 @@
   data_from_django = {{ data | safe }};
 
   var data = []
-    data_from_django.forEach(element => {
-        if(element.per_chld_immunzt_vit_k1 > 200)
+
+  data_from_django.forEach(element => {
+    if(element.per_chld_immunzt_vit_k1 > 200)
             element.per_chld_immunzt_vit_k1 = 200;
        if(element.per_chld_immunzt_bcg > 200)
             element.per_chld_immunzt_bcg = 200;
@@ -524,6 +528,7 @@
             element.per_chld_immunzt_dpt2_penta2 = 200;
         if(element.per_chld_immunzt_dpt3_penta3 > 200)
             element.per_chld_immunzt_dpt3_penta3 = 200;
+
         data.push(element);
     });
 
@@ -573,21 +578,21 @@
 
     switch (valCategory) {
 
-        case "Child Immunisation-Vitamin K1(Birth Dose)": xValue = d => d.per_chld_immunzt_vit_k1; sortByL = 'per_chld_immunzt_vit_k1'; break;
+      case "Child Immunisation-Vitamin K1(Birth Dose)": xValue = d => d.per_chld_immunzt_vit_k1; sortByL = 'per_chld_immunzt_vit_k1'; break;
 
-        case "Child Immunisation-BCG": xValue = d => d.per_chld_immunzt_bcg; sortByL = 'per_chld_immunzt_bcg'; break;
+            case "Child Immunisation-BCG": xValue = d => d.per_chld_immunzt_bcg; sortByL = 'per_chld_immunzt_bcg'; break;
 
-        case "Child Immunisation(9-11 months)-Measles & Rubella (MR) 1st Dose": xValue = d => d.per_chld_immunzt_9to11m_mr; sortByL = 'per_chld_immunzt_9to11m_mr'; break;
+            case "Child Immunisation(9-11 months)-Measles & Rubella (MR) 1st Dose": xValue = d => d.per_chld_immunzt_9to11m_mr; sortByL = 'per_chld_immunzt_9to11m_mr'; break;
 
-        case "Child immunisation-Vitamin A Dose-1": xValue = d => d.per_chld_immunzt_vit_a_dose_1; sortByL = 'per_chld_immunzt_vit_a_dose_1'; break;
+            case "Child immunisation-Vitamin A Dose-1": xValue = d => d.per_chld_immunzt_vit_a_dose_1; sortByL = 'per_chld_immunzt_vit_a_dose_1'; break;
 
-        case "Children(12-59 months) provided Albendazole": xValue = d => d.per_no_chld_12to59m_albendazole; sortByL = 'per_no_chld_12to59m_albendazole'; break;
+            case "Children(12-59 months) provided Albendazole": xValue = d => d.per_no_chld_12to59m_albendazole; sortByL = 'per_no_chld_12to59m_albendazole'; break;
 
-        case "Child immunisation DPT and Pentavalent 1st dose": xValue = d => d.per_chld_immunzt_dpt1_penta1; sortByL = 'per_chld_immunzt_dpt1_penta1'; break;
+            case "Child immunisation DPT and Pentavalent 1st dose": xValue = d => d.per_chld_immunzt_dpt1_penta1; sortByL = 'per_chld_immunzt_dpt1_penta1'; break;
 
-        case "Child immunisation DPT and Pentavalent 2nd dose": xValue = d => d.per_chld_immunzt_dpt2_penta2; sortByL = 'per_chld_immunzt_dpt2_penta2'; break;
+            case "Child immunisation DPT and Pentavalent 2nd dose": xValue = d => d.per_chld_immunzt_dpt2_penta2; sortByL = 'per_chld_immunzt_dpt2_penta2'; break;
 
-        case "Child immunisation DPT and Pentavalent 3rd dose": xValue = d => d.per_chld_immunzt_dpt3_penta3; sortByL = 'per_chld_immunzt_dpt3_penta3'; break;
+            case "Child immunisation DPT and Pentavalent 3rd dose": xValue = d => d.per_chld_immunzt_dpt3_penta3; sortByL = 'per_chld_immunzt_dpt3_penta3'; break;
     }
 
     var valMonth = tickLabels[$('#monthSlider').slider('getValue')];
@@ -606,21 +611,21 @@
 
     switch (valCategory) {
 
-        case "Child Immunisation-Vitamin K1(Birth Dose)": xValueR = d => d.per_chld_immunzt_vit_k1; sortByR = 'per_chld_immunzt_vit_k1'; break;
+      case "Child Immunisation-Vitamin K1(Birth Dose)": xValueR = d => d.per_chld_immunzt_vit_k1; sortByR = 'per_chld_immunzt_vit_k1'; break;
 
-        case "Child Immunisation-BCG": xValueR = d => d.per_chld_immunzt_bcg; sortByR = 'per_chld_immunzt_bcg'; break;
+            case "Child Immunisation-BCG": xValueR = d => d.per_chld_immunzt_bcg; sortByR = 'per_chld_immunzt_bcg'; break;
 
-        case "Child Immunisation(9-11 months)-Measles & Rubella (MR) 1st Dose": xValueR = d => d.per_chld_immunzt_9to11m_mr; sortByR = 'per_chld_immunzt_9to11m_mr'; break;
+            case "Child Immunisation(9-11 months)-Measles & Rubella (MR) 1st Dose": xValueR = d => d.per_chld_immunzt_9to11m_mr; sortByR = 'per_chld_immunzt_9to11m_mr'; break;
 
-        case "Child immunisation-Vitamin A Dose-1": xValueR = d => d.per_chld_immunzt_vit_a_dose_1; sortByR = 'per_chld_immunzt_vit_a_dose_1'; break;
+            case "Child immunisation-Vitamin A Dose-1": xValueR = d => d.per_chld_immunzt_vit_a_dose_1; sortByR = 'per_chld_immunzt_vit_a_dose_1'; break;
 
-        case "Children(12-59 months) provided Albendazole": xValueR = d => d.per_no_chld_12to59m_albendazole; sortByR = 'per_no_chld_12to59m_albendazole'; break;
+            case "Children(12-59 months) provided Albendazole": xValueR = d => d.per_no_chld_12to59m_albendazole; sortByR = 'per_no_chld_12to59m_albendazole'; break;
 
-        case "Child immunisation DPT and Pentavalent 1st dose": xValueR = d => d.per_chld_immunzt_dpt1_penta1; sortByR = 'per_chld_immunzt_dpt1_penta1'; break;
+            case "Child immunisation DPT and Pentavalent 1st dose": xValueR = d => d.per_chld_immunzt_dpt1_penta1; sortByR = 'per_chld_immunzt_dpt1_penta1'; break;
 
-        case "Child immunisation DPT and Pentavalent 2nd dose": xValueR = d => d.per_chld_immunzt_dpt2_penta2; sortByR = 'per_chld_immunzt_dpt2_penta2'; break;
+            case "Child immunisation DPT and Pentavalent 2nd dose": xValueR = d => d.per_chld_immunzt_dpt2_penta2; sortByR = 'per_chld_immunzt_dpt2_penta2'; break;
 
-        case "Child immunisation DPT and Pentavalent 3rd dose": xValueR = d => d.per_chld_immunzt_dpt3_penta3; sortByR = 'per_chld_immunzt_dpt3_penta3'; break;
+            case "Child immunisation DPT and Pentavalent 3rd dose": xValueR = d => d.per_chld_immunzt_dpt3_penta3; sortByR = 'per_chld_immunzt_dpt3_penta3'; break;
 
     }
 
