--- a/templates/hmis_dash/fy_lineNum.html
+++ b/templates/hmis_dash/fy_lineNum.html
@@ -447,7 +447,8 @@
 
         function removeTooltip() {
             if (tooltip) tooltip.style('display', 'none');
-            // if(mouseG)     mouseG.selectAll('.mouse-per-line').selectAll('.topic-circle').remove();
+            if(mouseG)     d3.selectAll('.mouse-line').style("opacity", "0");
+            if(mouseG)     d3.selectAll(".mouse-per-line circle").style("opacity", "0");
         }
 
         function drawTooltip() {
@@ -483,7 +484,7 @@
 
             tooltip.html('<b style="color:#FF0000">' + monthX + '</b>' + '<br>' + '<b style="color: rgb(30, 6, 116)">State Name: ' + stname + '</b>')
                 .style('display', 'block')
-                .style('left', d3.event.pageX + "px")
+                .style('left', d3.event.pageX - 200 + "px")
                 .style('top', 40 + "px")
                 .selectAll()
                 .data(result).enter()
