--- a/templates/hmis_dash/linechart.html
+++ b/templates/hmis_dash/linechart.html
@@ -576,28 +576,28 @@
       section = 'anc_4_or_more';
     else if (val == 'PW given TT1')
       section = 'pw_tt1_given';
-    else if (val == 'TT1 to TT2 Dropout')
-      section = 'pw_tt2_given';
+    else if (val == 'PW given TT1 or TT Booster')
+      section = 'per_pw_given_tt1_or_tt_booster';
     else if (val == 'PW given TT Booster as fraction of children born (or live births)')
       section = 'pw_tt_booster_given';
+    else if (val == 'TT1 to TT2 Dropout')
+      section = 'pw_tt2_given';
     else if (val == 'PW given 360 Calcium tablets')
       section = 'pw_calcium';
     else if (val == 'PW given 180 Iron Folic Acid (IFA) tablets')
       section = 'pw_ifa';
     else if (val == 'PW given one Albendazole tablet after 1st trimester')
       section = 'pw_albendazole';
-    else if (val = 'C-section deliveries')
-      section = 'c_section_deliveries';
-    else if (val == 'PW given TT1 or TT Booster')
-      section = 'per_pw_given_tt1_or_tt_booster';
     else if (val == 'Severely Anaemic PW given treatment')
       section = 'per_severe_anaemia_tested_treated';
+    else if (val == 'Still_Birth_Rate_(Still_births_per_1000_Live_Births)')
+      section = 'per_still_birth';
+    else if (val = 'C-section deliveries')
+      section = 'c_section_deliveries';
     else if (val == 'Preterm Birth Rate')
       section = 'preterm_birth_rate';
-    else if (val == 'Pregnancy outcomes as a % of ANC registration')
-      section = 'per_pw_outcome';
-    else 
-      section = 'per_still_birth'  
+    else
+      section = 'per_pw_outcome';  
   }
 
   // $(".state a").click(function () {
